# classy-sync

./: .gitignore  Cargo.toml  README.md
data/: classes.sqlite
migrations/: 001.down.sql  001.up.sql
src/: argument_parser.rs  errors.rs  lib.rs  main.rs  replicate_datastore.rs  sync_classes.rs  sync_requests.rs
src/data_stores/: mod.rs  replicate_datastore.rs  sync_requests.rs
src/data_stores/sqlite/: README.md  errors.rs  mod.rs  sqlite.rs  storage.rs
src/data_stores/sqlite/migrations/: 001.down.sql  001.up.sql  002.up.sql
test-syncs/: maristfall2024.json
test-syncs/maristfall2024/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json
test-syncs/maristterms/: 202440.json  202540.json
