[package]
name = "classy-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.7"
log = "0.4.26"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
regex = "1.11.1"
chrono = "0.4"
strum = { version="0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
dotenv = "0.15.0"
lazy_static = "1.5.0"
rusqlite = { version="0.37.0", features = ["bundled", "array"] }
