[package]
name = "classy-sync"
version = "0.1.1"
license = "MIT"
description = "Sync data from classy to other data stores"
repository = "https://github.com/Pjt727/classy-sync"
readme = "README.md"
keywords = ["university", "college", "classes", "schedule", "professor"]
categories = ["api-bindings", "command-line-utilities", "database"]
edition = "2024"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]

[dependencies]
env_logger = "0.11.7"
log = "0.4.26"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
regex = "1.11.1"
chrono = "0.4"
strum = { version="0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
dotenv = "0.15.0"
lazy_static = "1.5.0"
rusqlite = { version="0.37.0", features = ["bundled", "array"], optional = true }
clap = { version = "4.5.45", features = ["derive"] }

[dev-dependencies]
mockito = "1.4.0"
